scripts/nullness/original/url49fd521e8b_Kineolyan_JSpec_tgz-pJ8-fw_MainJ8.txt
../original/url49fd521e8b_Kineolyan_JSpec_tgz-pJ8-fw_MainJ8/src/fw/Test.java:40: error: [argument] incompatible argument for parameter value of SyntaxicTestCase.should.
    should(valueNull, BE_NULL);
           ^
  found   : @FBCBottom @Nullable Object
  required: @Initialized @NonNull Object
1 error
